# spotify-web-player

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/app/: consts.py  exception_handlers.py  main.py
backend/src/app/auth/: consts.py  dependencies.py  exceptions.py  storage.py  utils.py
backend/src/app/auth/api/: routes.py  schemas.py
backend/src/app/desktop/: consts.py  dependencies.py  exceptions.py  executor.py  reader.py
backend/src/app/desktop/api/: routes.py  schemas.py
backend/src/app/desktop/applescripts/: checkClient.scpt  getPlayback.scpt  openSpotify.scpt  pausePlayback.scpt  playPlayback.scpt  toNextTrack.scpt  toPreviousTrack.scpt
frontend/: .babelrc  Dockerfile  entrypoint.sh  nginx.conf  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/ErrorPanels/: ErrorCard.tsx  WarningCard.tsx
frontend/src/components/NavPanel/: NavPanel.tsx
frontend/src/components/PlaybackPanel/: PlaybackPanel.tsx
frontend/src/components/QueuePanel/: QueueItem.tsx  QueuePanel.tsx
frontend/src/components/SettingsPanel/: SettingsPanel.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx
frontend/src/state/: accessTokenStore.ts  errorStore.ts  loadingStore.ts  menuSelectorStore.ts  settingsParamsStore.ts
frontend/src/styles/: App.scss  defaults.scss  general.scss  globals.scss
frontend/src/types/: consts.ts  errors.ts  types.ts
(+45 files in other folders)
